--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />  
+    <meta charset="utf-8" />
     <title>Title goes here!</title>
   </head>
   <body>
-    <div id="app">
-      
-    </div>
+    <div id="app"></div>
   </body>
 </html>
