--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <title>Title goes here!</title>
   </head>
   <body>
+    Helo
     <div id="app"></div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
