--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Title goes here!</title>
   </head>
   <body>
-    Helo
+    Hello there
     <div id="app"></div>
 
     <script src="./index.js"></script>
