--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <title>Title goes here!</title>
   </head>
   <body>
-    Helo
+    Click twice.
     <div id="app"></div>
 
     <script src="./index.js"></script>
+    <script src="./sound.js"></script>
   </body>
 </html>
