fractals basics and starting state structure

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <title>Title goes here!</title>
   </head>
   <body>
-    Click twice.
-    <div id="app"></div>
+    <div id="app">
+    </div>
 
     <script src="./index.js"></script>
   </body>
