--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Title goes here!</title>
   </head>
   <body>
+  	<button type="button" id = "button">tick</button>
     <div id="app">
     </div>
 
