--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <title>Title goes here!</title>
   </head>
   <body>
-  	<button type="button" id = "button">tick</button>
     <div id="app">
+      <button type="button" id="tick">tick</button>
+      <button type="button" id="clear">clear</button>
     </div>
 
     <script src="./index.js"></script>
